structural_safety final update

--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -26,6 +26,34 @@
     "Partial factors on Effects-side and Resistance side combine various types of uncertainties\n",
     "```\n",
     "\n",
+    "```{Admonition} In depth review of partial factors from Eurocode\n",
+    ":class: note, dropdown\n",
+    "\n",
+    "How are the values of $\\gamma_{F}$ and $\\gamma_{M}$ related to the stochastic spread? From Schneider and Vrouwenvelder (2017, equation 4.44) the following equations can be derived:\n",
+    "\n",
+    "$$\n",
+    "\\gamma_i = \\frac{\\mu_i - \\alpha_i \\cdot \\beta_0 \\cdot \\sigma_i}{X_{char,i}}\n",
+    "$$\n",
+    "\n",
+    "in which the following variables are visible:\n",
+    "- $\\gamma_i$: partial safety factor for i (i can be E or R)\n",
+    "- $\\mu_i$: mean value of i\n",
+    "- $\\alpha_i$: weighing factor depending on how dominant the factor is for the reliability of the structure, often $\\alpha_R = 0.8$ for the most dominant resistance variable, $\\alpha_R = 0.32$ for other (non-dominant) resistance variables, $\\alpha_E = -0.7$ for the most dominant load variable or $\\alpha_E = -0.28$ for non-dominant load variables.\n",
+    "- $\\beta_0$: required (targeted) reliability index\n",
+    "- $\\sigma_i$: standard deviation of i\n",
+    "- $X_{char,i}$: characteristic value of i\n",
+    "\n",
+    "After substitution of E and R, this yields:\n",
+    "\n",
+    "$$\n",
+    "\\gamma_E = \\frac{\\mu_E - \\alpha_E \\cdot \\beta_0 \\cdot \\sigma_E}{E_{char}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\gamma_M = \\frac{R_{char}}{\\mu_R - \\alpha_R \\cdot \\beta_0 \\cdot \\sigma_R}\n",
+    "$$\n",
+    "```\n",
+    "\n",
     "## Effect vs Resistance\n",
     "The general objective of calculations overseeing safety is that the resistance of the structure should be greater than the effect of the load. A useful way to express this is the unity check {eq}`unity_check`. This check is obtained in 4 steps. The image below gives good visual insight in the steps.\n",
     "\n",
@@ -52,6 +80,7 @@
     "```{figure} Images/E_R_normaldistributions.png\n",
     "---\n",
     "---\n",
+    ":name: example\n",
     "Example of a normal distribution of Effects (E) and Resistance (R) and the place of\n",
     "characteristic values Echar and Rchar and design values Ed and Rd. The characteristic\n",
     "values are obtained by finding from the normal distribution the values with a 5% prob-\n",
@@ -62,12 +91,44 @@
     "is more than safe.\n",
     "```\n",
     "\n",
-    "## Python implementation"
+    "## Reliability index\n",
+    "\n",
+    "The \"safety distance\" should somehow be numerically linked to the accepted level of failure probability. Understandably, the higher the standard deviation of either or both variables E and R, the higher the safety distance should be to achieve the same level of reliabilty. For example, a safety margin of 1 MPa between Ed and Rd does mean less safety for a material with a standard deviation σM = 100 MPa than it does for a material with a standard deviation σM = 10 MPa (why?). To this end, the reliability index β is defined as a function of the spread of the variables E and R. First, an auxilary reliability function {eq}`reliability` is defined. Furthermore, we also need equations for the mean {eq}`mu_Z` and standard deviation {eq}`sigma_Z` of the reliability Z.\n",
+    "\n",
+    "$$\n",
+    "Z = R - E\n",
+    "$$(reliability)\n",
+    "\n",
+    "$$\n",
+    "\\mu_Z = \\mu_R - \\mu_E\n",
+    "$$(mu_Z)\n",
+    "\n",
+    "$$\n",
+    "\\sigma_Z = \\sqrt{\\sigma_R^2 + \\sigma_E^2}\n",
+    "$$(sigma_Z)\n",
+    "\n",
+    "The reliability index of this particular example can now be calculated as the proportion between the average and the standard deviation as in equation {eq}`beta`. For our particular example ({ref}`example`) β = 6.8. Using the image in {ref}`failure_prob`, we can conclude that with this value of β the probability of failure is very small: Pf ≪ 10−8, and that we could have done with a higher E or smaller R or both and still be okay.\n",
+    "\n",
+    "$$\n",
+    "\\beta = \\frac{\\mu_z}{\\sigma_z}\n",
+    "$$(beta)\n",
+    "\n",
+    "```{figure} Images/failure_prob_rel.png\n",
+    "---\n",
+    "---\n",
+    ":name: failure_prob\n",
+    "Relation between failure probability Pf and reliability index β\n",
+    "(prNEN-EN-1990 2021, table C.2)\n",
+    "```\n",
+    "\n",
+    "## Python implementation\n",
+    "\n",
+    "Now that the theoretical background is explained, the functions can be implemented in python to obtain fast numerical results. These results are visualized in two plots. The functions `plot_effect_vs_resistance` and `plot_Z`. First the necessary libraries are imported. The fuctions are shown below. In the plots, the numerical calculations and end results are shown."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,12 +300,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initializing examples with data"
+    "## Initializing examples with data\n",
+    "\n",
+    "Using the functions defined above, plots can be generated. To do so, we need numerical input values. The numerical values for the example plot above are defined below and the functions executed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -298,11 +361,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```{card}\n",
+    "**Exercise**\n",
+    "\n",
+    "If $\\mu_E = 100$, $\\sigma_E = 20$, $\\mu_R = 240$ and $\\sigma_R = 20$,\n",
+    "what are $\\mu_Z$, $\\sigma_Z$ and $\\beta$?\n",
+    "Use $\\gamma_E = 1.5$ and $\\gamma_R = 1.2$.\n",
+    "\n",
+    "You might want to download some code cells or the full .ipynb page and put code in there to perform the calculations and plot the graphs.\n",
+    "\n",
+    "```{Admonition} Solution\n",
+    ":class: dropdown, tip\n",
+    "$\\mu_Z = \\mu_R - \\mu_E = 140$  \n",
+    "$\\sigma_Z = \\sqrt{\\sigma_R^2 + \\sigma_E^2} = 22.4$  \n",
+    "$\\beta = \\frac{\\mu_Z}{\\sigma_Z} = 6.3$\n",
+    "```\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
