--- a/book/design_workflow/general_design_guide.ipynb
+++ b/book/design_workflow/general_design_guide.ipynb
@@ -11,7 +11,7 @@
     "The design process is part of the life cycle of a structure: the ‘idea-phase’, \n",
     "the ‘design-phase’, the ‘construction phase’, the ‘use and maintenance phase’, \n",
     "and the ‘demolition phase’. The structural engineer acts in the ‘design phase’. \n",
-    "The terms ‘initiative’, ‘project definition’, ‘concepts’, ‘preliminary design’, \n",
+    "The terms ‘initiative’, ‘project definition’, ‘concept development’, ‘preliminary design’, \n",
     "and ‘verification of structural safety’ will be explained shortly below.\n",
     "\n",
     "## Initiative\n",
@@ -22,7 +22,7 @@
     "designer can study different aspects of the project. For example: the\n",
     "location, the budget and functional requirements. When all aspects are determined, \n",
     "they are integrated and evaluated. The final step of this phase is to check whether \n",
-    "the project is financially and logisticallyfeasible. If this is not the case, \n",
+    "the project is financially and logistically feasible. If this is not the case, \n",
     "the design goals need to be adjusted. The concequence of this is that the whole \n",
     "cycle starts again (aspects, integration, evaluation and check).\n",
     "\n",
@@ -36,7 +36,7 @@
     "To define the project, one first drafts a plan of action (strategy). This\n",
     "determines how to proceed in this phase, what the results should be and\n",
     "the criteria to which the result of this phase should be compared. Just like\n",
-    "in the previous phase various aspectstudies need to be done. Eventually\n",
+    "in the previous phase various aspect studies need to be done. Eventually\n",
     "this leads to the formulation of a report containing all basic assumptions\n",
     "concerning the structural design. This forms a supplement to the PoR.\n",
     "\n",
@@ -45,23 +45,23 @@
     "A Program of Requirements supplemented with structural assumptions\n",
     "`````\n",
     "\n",
-    "## Concepts\n",
+    "## Concept development\n",
     "\n",
     "In this phase too several studies have to be performed. The designer makes several\n",
-    "‘structural’ concepts. To make a sensible design, he first analyses the force flow\n",
+    "‘structural’ concepts. To make a sensible design, she first analyses the force flow\n",
     "in both horizontal and vertical direction. Also the ability of the structure to retain\n",
     "its shape and place is investigated as well as the connections between different\n",
     "elements and parts of the building. After feedback from the structural assumptions\n",
     "at least two of the concepts are chosen for further analysis. With the aid of design\n",
     "tools (rules of thumb, diagrams and tables) the overall dimensions of the structure\n",
-    "(including stability measures) are determined and critical connections are studied\n",
-    "for feasibility. The sections on different materials contain information on\n",
+    "(including stability measures) are estimated and critical connections are studied\n",
+    "for feasibility. The sections in this Quick Reference on different materials contain information on\n",
     "structural elements (such as precast conrete beams, hollow core slabs etc.)\n",
     "and tables with available (steel) profiles to come to reasonable dimensions. Already\n",
-    "in this stage it is wise to orientate on different foundation possibilities as\n",
-    "the foundation can have influence on the rest of the structure. The section on\n",
-    "foundations can provide the necessary information. Although the load bearing\n",
-    "structure is designed, this phase is not yet finished. Finally the designer needs\n",
+    "in this stage it is wise to orient oneself to different foundation possibilities as\n",
+    "the foundation design will influence the above-ground structure and the other way around. \n",
+    "The section on foundations provides the necessary information. Although the load bearing\n",
+    "structure is now designed, this phase is not yet finished. Finally the designer needs\n",
     "to look into possible façades and roof elements. Now a choice can be made between\n",
     "the different concepts based on a multi criteria analysis. The criteria are based\n",
     "on the PoR and structural assumptions.\n",
@@ -115,7 +115,13 @@
     ":class: tip\n",
     "A structural design which not only meets the needs of the client and other stakeholders but also complies with the\n",
     "applying structural code.\n",
-    "`````\n"
+    "`````\n",
+    "\n",
+    "```{figure} Images/20240718 flowchart structural design Klompenhouwer.png\n",
+    "---\n",
+    "---\n",
+    "Flowchart of the structural design developed by Klompenhouwer (2015)\n",
+    "```"
    ]
   },
   {
