Naam afbeelding gewijzigd

--- a/book/design_workflow/general_design_guide.ipynb
+++ b/book/design_workflow/general_design_guide.ipynb
@@ -117,7 +117,7 @@
     "applying structural code.\n",
     "`````\n",
     "\n",
-    "```{figure} Images/20240718 flowchart structural design Klompenhouwer.png\n",
+    "```{figure} Images/20240718_flowchart_structural_design_Klompenhouwer.png\n",
     "---\n",
     "---\n",
     "Flowchart of the structural design developed by Klompenhouwer (2015)\n",
