Additional section on Diagram Klompenhower

--- a/book/design_workflow/general_design_guide.ipynb
+++ b/book/design_workflow/general_design_guide.ipynb
@@ -117,6 +117,10 @@
     "applying structural code.\n",
     "`````\n",
     "\n",
+    "## Diagram of workflow during the structural design\n",
+    "\n",
+    "Klompenhouwer (2015) has developed a flowchart that illustrates all steps in structural design and their logical order. It can be useful as a guideline for less experienced designers to help them organise their workflow and understand all necessary steps.\n",
+    "\n",
     "```{figure} Images/20240718_flowchart_structural_design_Klompenhouwer.png\n",
     "---\n",
     "---\n",
