PDF en NL-versie Klompenhouwer toegevoegd

--- a/book/design_workflow/general_design_guide.ipynb
+++ b/book/design_workflow/general_design_guide.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "## Diagram of workflow during the structural design\n",
     "\n",
-    "Klompenhouwer (2015) has developed a flowchart that illustrates all steps in structural design and their logical order. It can be useful as a guideline for less experienced designers to help them organise their workflow and understand all necessary steps.\n",
+    "Klompenhouwer (2015) has developed a flowchart that illustrates all steps in structural design and their logical order. It can be useful as a guideline for less experienced designers to help them organise their workflow and understand all necessary steps. A PDF-version of the figure below can be found [here](https://teachbooks.github.io/Quick_Reference/main/design_workflow/Images/20240718_flowchart_structural_design_Klompenhouwer.pdf) and a Dutch version [here](https://teachbooks.github.io/Quick_Reference/main/design_workflow/Images/Klompenhouwer_Stroomschema_constructief_ontwerpen.pdf)\n",
     "\n",
     "```{figure} Images/20240718_flowchart_structural_design_Klompenhouwer.png\n",
     "---\n",
