add download link

--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# General design guide\n",
+    "# General design info\n",
     "\n",
     "## The design process\n",
     "\n",
@@ -125,7 +125,8 @@
     "---\n",
     "---\n",
     "Flowchart of the structural design developed by Klompenhouwer (2015)\n",
-    "```"
+    "```\n",
+    "You can {download}`Download the file here <./20240718_flowchart_structural_design_Klompenhouwer.pdf>`"
    ]
   },
   {
