--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -126,7 +126,7 @@
     "---\n",
     "Flowchart of the structural design developed by Klompenhouwer (2015)\n",
     "```\n",
-    "You can {download}`Download the file here </_static/20240718_flowchart_structural_design_Klompenhouwer.pdf>`"
+    "You can `Download the file here </_static/20240718_flowchart_structural_design_Klompenhouwer.pdf>`"
    ]
   },
   {
