found the solution!

--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# General design info\n",
-    "\n",
-    "## The design process\n",
+    "# The design process\n",
     "\n",
     "The design process is part of the life cycle of a structure: the ‘idea-phase’, \n",
     "the ‘design-phase’, the ‘construction phase’, the ‘use and maintenance phase’, \n",
@@ -125,8 +123,7 @@
     "---\n",
     "---\n",
     "Flowchart of the structural design developed by Klompenhouwer (2015)\n",
-    "```\n",
-    "You can `Download the file here </_static/20240718_flowchart_structural_design_Klompenhouwer.pdf>`"
+    "```"
    ]
   },
   {
