flowchart design process included

--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -6,11 +6,17 @@
    "source": [
     "# The design process\n",
     "\n",
-    "The design process is part of the life cycle of a structure: the ‘idea-phase’, \n",
-    "the ‘design-phase’, the ‘construction phase’, the ‘use and maintenance phase’, \n",
-    "and the ‘demolition phase’. The structural engineer acts in the ‘design phase’. \n",
-    "The terms ‘initiative’, ‘project definition’, ‘concept development’, ‘preliminary design’, \n",
-    "and ‘verification of structural safety’ will be explained shortly below.\n",
+    "The design process is part of the life cycle of a structure, consisting of the ‘idea-phase’, the ‘design phase’, the ‘construction phase’, the ‘use and maintenance phase’, and the ‘end-of-life phase’ (the latter possibly being reuse). The structural engineer primarily, but not solely, acts in the ‘design phase’. Especially for starting structural designers who have only background knowledge in structural mechanics and mathematics, it is necessary to realise that designing is fundamentally different from 'solving equations'. In most cases, structures are complex systems, developed according to structural concepts and consisting of multiple subsystems. This complexity makes the design process less straightforward, and a problem solving strategy is needed. One of these strategies is to break down the process into smaller steps, which steps are iteratively followed to reach a (not 'the') solution.\n",
+    "\n",
+    "This iterative process is illustrated by the following image:\n",
+    "\n",
+    "```{figure} Images/hydraulic_structures_design_cycle.png\n",
+    "---\n",
+    "---\n",
+    "Flowchart of the structural design developed by Voorendt et al (2015)\n",
+    "```\n",
+    "\n",
+    "The terms ‘initiative’, ‘project definition’, ‘concept development’, ‘preliminary design’, and ‘verification of structural safety’ will be explained shortly below.\n",
     "\n",
     "## Initiative\n",
     "The client initiates a construction project or structure. The designer,\n",
