rewritten design stage

--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -35,7 +35,7 @@
     "A Program of Requirements (PoR) formulated by the client\n",
     "`````\n",
     "\n",
-    "## Project definition\n",
+    "## Design definition\n",
     "\n",
     "To define the project, one first drafts a plan of action (strategy). This\n",
     "determines how to proceed in this phase, what the results should be and\n",
@@ -49,7 +49,7 @@
     "A Program of Requirements supplemented with structural assumptions\n",
     "`````\n",
     "\n",
-    "## Concept development\n",
+    "## Development of concepts\n",
     "\n",
     "In this phase too several studies have to be performed. The designer makes several\n",
     "‘structural’ concepts. To make a sensible design, she first analyses the force flow\n",
@@ -75,14 +75,14 @@
     "Design sketches of the different concepts with a reasoned choice of a design\n",
     "`````\n",
     "\n",
-    "## Preliminairy structural design\n",
+    "## Estimation of dimensions\n",
     "\n",
     "Now all the dimensions of the chosen structure can be determined. Again the sections\n",
     "on the different materials can be helpful. Make sure, also in this preliminairy\n",
     "design, that stability of your structure is ensured. It is a good idea to search\n",
     "for alternative possibilities for the foundation and connecting structure to prevent\n",
-    "surprises in the final design stage. Also the building envelope deserves some\n",
-    "attention. Use the different examples given in the later chapters.\n",
+    "surprises in the final design stage. In case of buildings, also the building envelope deserves some\n",
+    "attention. For operable bridges, mechanical parts may require attention. Use the different examples given in the later chapters.\n",
     "\n",
     "`````{admonition} Result\n",
     ":class: tip\n",
@@ -90,7 +90,7 @@
     "foundation and façades.\n",
     "`````\n",
     "\n",
-    "## Preliminary design\n",
+    "## Check of strength, stiffness and stability\n",
     "\n",
     "In this phase a further analysis of the strength, behaviour of the structure\n",
     "is made. Also the stability is checked, and necessary stability measures are added.\n",
