--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The design process\n",
     "\n",
-    "The design process is part of the life cycle of a structure, consisting of the ‘idea-phase’, the ‘design phase’, the ‘construction phase’, the ‘use and maintenance phase’, and the ‘end-of-life phase’ (the latter possibly being reuse). The structural engineer primarily, but not solely, acts in the ‘design phase’. Especially for starting structural designers who have only background knowledge in structural mechanics and mathematics, it is necessary to realise that designing is fundamentally different from 'solving equations'. In most cases, structures are complex systems, developed according to structural concepts and consisting of multiple subsystems. This complexity makes the design process less straightforward, and a problem solving strategy is needed. One of these strategies is to break down the process into smaller steps, which steps are iteratively followed to reach a (not 'the') solution.\n",
+    "The design process is part of the life cycle of a structure, consisting of the ‘idea-phase’, the ‘design phase’, the ‘construction phase’, the ‘use and maintenance phase’, and the ‘end-of-life phase’ (the latter possibly being reuse). The structural engineer primarily, but not solely, acts in the ‘design phase’. Especially for starting structural designers who mostly have background knowledge in structural mechanics and mathematics, it is necessary to realise that designing is fundamentally different from 'solving equations'. In most cases, structures are complex systems, developed according to structural concepts and consisting of multiple subsystems. This complexity makes the design process less straightforward than just mechanics or mathematics, and a problem solving strategy is needed. One of these strategies is to break down the process into smaller steps, which are iteratively followed to reach a (not 'the') solution.\n",
     "\n",
     "This iterative process is illustrated by the following image:\n",
     "\n",
@@ -77,7 +77,7 @@
     "\n",
     "## Estimation of dimensions\n",
     "\n",
-    "Now all the dimensions of the chosen structure can be determined. Again the sections\n",
+    "As substep of 1.4, now all the dimensions of the chosen structure can be determined. Again the sections\n",
     "on the different materials can be helpful. Make sure, also in this preliminairy\n",
     "design, that stability of your structure is ensured. It is a good idea to search\n",
     "for alternative possibilities for the foundation and connecting structure to prevent\n",
@@ -92,7 +92,7 @@
     "\n",
     "## Check of strength, stiffness and stability\n",
     "\n",
-    "In this phase a further analysis of the strength, behaviour of the structure\n",
+    "As next substep of 1.4, a further analysis of the strength, behaviour of the structure\n",
     "is made. Also the stability is checked, and necessary stability measures are added.\n",
     "To do this, quick calculations are made with simplified load combinations. The\n",
     "section on mechanics offers the necessary formulas and ‘forget-me-nots’. More\n",
@@ -123,7 +123,7 @@
     "\n",
     "## Diagram of workflow during the structural design\n",
     "\n",
-    "Klompenhouwer (2015) has developed a flowchart that illustrates all steps in structural design and their logical order. The figure is shown below. It can be useful as a guideline for less experienced designers to help them organise their workflow and understand all necessary steps. A PDF-version of the same figure can be found [here](Images/20240718_flowchart_structural_design_Klompenhouwer.pdf) and a Dutch version [here](Images/Klompenhouwer_Stroomschema_constructief_ontwerpen.pdf).\n",
+    "Klompenhouwer (2015) has developed a flowchart that illustrates all substeps in structural design and their logical order. The figure is shown below. It can be useful as a guideline for less experienced designers to help them organise their workflow and understand all necessary steps. A PDF-version of the same figure can be found [here](Images/20240718_flowchart_structural_design_Klompenhouwer.pdf) and a Dutch version [here](Images/Klompenhouwer_Stroomschema_constructief_ontwerpen.pdf).\n",
     "\n",
     "```{figure} Images/20240718_flowchart_structural_design_Klompenhouwer.png\n",
     "---\n",
