--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -108,7 +108,7 @@
     "the foundation, building envelope, fabrication, erection and structural details.\n",
     "`````\n",
     "\n",
-    "## Verification of the structural safety and servicability\n",
+    "## Validation (or: verification) of the structural design\n",
     "\n",
     "The final preliminairy design of which the final dimensions are now determined,\n",
     "has to be checked with a structural code. In Europe this is the Eurocode. The\n",
