--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -52,47 +52,46 @@
     "## Development of concepts\n",
     "\n",
     "In this phase too several studies have to be performed. The designer makes several\n",
-    "‘structural’ concepts. To make a sensible design, she first analyses the force flow\n",
-    "in both horizontal and vertical direction. Also the ability of the structure to retain\n",
-    "its shape and place is investigated as well as the connections between different\n",
-    "elements and parts of the building. After feedback from the structural assumptions\n",
-    "at least two of the concepts are chosen for further analysis. With the aid of design\n",
-    "tools (rules of thumb, diagrams and tables) the overall dimensions of the structure\n",
-    "(including stability measures) are estimated and critical connections are studied\n",
-    "for feasibility. The sections in this Quick Reference on different materials contain information on\n",
-    "structural elements (such as precast conrete beams, hollow core slabs etc.)\n",
-    "and tables with available (steel) profiles to come to reasonable dimensions. Already\n",
-    "in this stage it is wise to orient oneself to different foundation possibilities as\n",
-    "the foundation design will influence the above-ground structure and the other way around. \n",
-    "The section on foundations provides the necessary information. Although the load bearing\n",
-    "structure is now designed, this phase is not yet finished. Finally the designer needs\n",
-    "to look into possible façades and roof elements. Now a choice can be made between\n",
-    "the different concepts based on a multi criteria analysis. The criteria are based\n",
-    "on the PoR and structural assumptions.\n",
+    "structural concepts. Examples of structural concepts can be found elsewhere on these \n",
+    "pages. To make a sensible design, she first analyses the force flow in both horizontal \n",
+    "and vertical direction. Also the ability of the structure to retain its shape and \n",
+    "place is investigated as well as the connections between different elements and \n",
+    "parts of the building. After feedback from the structural assumptions at least \n",
+    "two of the concepts are chosen for further analysis. \n",
+    "\n",
+    "Although the load bearing structure is now designed, this phase is not yet finished. \n",
+    "Finally the designer needs to look into possible façades and roof elements. Now a \n",
+    "choice can be made between the different concepts based on a multi criteria analysis. \n",
+    "The criteria are based on the PoR and structural assumptions.\n",
     "\n",
     "`````{admonition} Result\n",
     ":class: tip\n",
     "Design sketches of the different concepts with a reasoned choice of a design\n",
     "`````\n",
     "\n",
-    "## Estimation of dimensions\n",
+    "### Estimation of dimensions\n",
     "\n",
-    "As substep of 1.4, now all the dimensions of the chosen structure can be determined. Again the sections\n",
-    "on the different materials can be helpful. Make sure, also in this preliminairy\n",
-    "design, that stability of your structure is ensured. It is a good idea to search\n",
-    "for alternative possibilities for the foundation and connecting structure to prevent\n",
-    "surprises in the final design stage. In case of buildings, also the building envelope deserves some\n",
-    "attention. For operable bridges, mechanical parts may require attention. Use the different examples given in the later chapters.\n",
+    "With the aid of design tools (rules of thumb, diagrams and tables) the overall\n",
+    "dimensions of the structure (including stability measures) are estimated and critical\n",
+    "connections are studied for feasibility. The sections in this Quick Reference on\n",
+    "different materials contain information on structural elements (such as precast conrete \n",
+    "beams, hollow core slabs etc.) and tables with available (steel) profiles to come to \n",
+    "reasonable dimensions. Already in this stage it is wise to orient oneself to different \n",
+    "foundation possibilities as the foundation design will influence the above-ground \n",
+    "structure and the other way around. The section on foundations provides the necessary \n",
+    "information. In case of buildings, also the building envelope deserves some attention. \n",
+    "For operable bridges, mechanical parts may require attention. Use the different examples \n",
+    "given in the later chapters.\n",
     "\n",
     "`````{admonition} Result\n",
     ":class: tip\n",
-    "General preliminary structural design, general dimensions of the main structure. Ideas on fabrication, erection,\n",
-    "foundation and façades.\n",
+    "General preliminary structural design, general dimensions of the main structure. \n",
+    "Ideas on fabrication, erection, foundation, mechanical parts and façades.\n",
     "`````\n",
     "\n",
-    "## Check of strength, stiffness and stability\n",
+    "### Check of strength, stiffness and stability\n",
     "\n",
-    "As next substep of 1.4, a further analysis of the strength, behaviour of the structure\n",
+    "As next substep a further analysis of the strength, behaviour of the structure\n",
     "is made. Also the stability is checked, and necessary stability measures are added.\n",
     "To do this, quick calculations are made with simplified load combinations. The\n",
     "section on mechanics offers the necessary formulas and ‘forget-me-nots’. More\n",
@@ -104,8 +103,9 @@
     "\n",
     "`````{admonition} Result\n",
     ":class: tip\n",
-    "A structure which retains its place and shape under loading with dimensioned structural parts. A conceptual design of\n",
-    "the foundation, building envelope, fabrication, erection and structural details.\n",
+    "A structure which retains its place and shape under loading with dimensioned \n",
+    "structural parts. A conceptual design of the foundation, building envelope, \n",
+    "fabrication, erection and structural details.\n",
     "`````\n",
     "\n",
     "## Validation (or: verification) of the structural design\n",
@@ -123,7 +123,7 @@
     "\n",
     "## Diagram of workflow during the structural design\n",
     "\n",
-    "Klompenhouwer (2015) has developed a flowchart that illustrates all substeps in structural design and their logical order. The figure is shown below. It can be useful as a guideline for less experienced designers to help them organise their workflow and understand all necessary steps. A PDF-version of the same figure can be found [here](Images/20240718_flowchart_structural_design_Klompenhouwer.pdf) and a Dutch version [here](Images/Klompenhouwer_Stroomschema_constructief_ontwerpen.pdf).\n",
+    "Klompenhouwer (2015) has developed a flowchart that focusses on the smaller substeps of 1.4 and their logical order. The figure is shown below. It can be useful as a more detailed guideline. A PDF-version of the same figure can be found [here](Images/20240718_flowchart_structural_design_Klompenhouwer.pdf) and a Dutch version [here](Images/Klompenhouwer_Stroomschema_constructief_ontwerpen.pdf).\n",
     "\n",
     "```{figure} Images/20240718_flowchart_structural_design_Klompenhouwer.png\n",
     "---\n",
