--- a/book/design_workflow/general_design_info.ipynb
+++ b/book/design_workflow/general_design_info.ipynb
@@ -93,7 +93,8 @@
     "\n",
     "As next substep a further analysis of the strength, behaviour of the structure\n",
     "is made. Also the stability is checked, and necessary stability measures are added.\n",
-    "To do this, quick calculations are made with simplified load combinations. The\n",
+    "To do this, quick calculations are made with simplified load combinations for the \n",
+    "Ultimate Limit State (ULS) and Serviceability Limit State (SLS). The\n",
     "section on mechanics offers the necessary formulas and ‘forget-me-nots’. More\n",
     "attention is given to the foundation of the structure. Calculate the total vertical\n",
     "load and design a transition structure (which transfers the loads from the main\n",
