bijlage A ontwerptekeningen toegevoegd

--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -68,7 +68,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bijlage A"
+    "## Bijlage A - Ontwerptekeningen\n",
+    "\n",
+    "```{figure} Images/figuurA1_3dmodel_met_kanaalplaatvloeren_en_stalendakplaten.png\n",
+    "---\n",
+    "name: figuurA1\n",
+    "---\n",
+    "3D model met kanaalplaatvoer en stalen dakplaten\n",
+    "``` \n",
+    "\n",
+    "```{figure} Images/figuurA2_plattegrond_eerste_verdieping.png\n",
+    "---\n",
+    "name: figuurA2\n",
+    "---\n",
+    "Plattegrond eerste verdieping\n",
+    "``` \n",
+    "\n",
+    "```{figure} Images/figuurA3_plattegrond_tweede_verdieping.png\n",
+    "---\n",
+    "name: figuurA3\n",
+    "---\n",
+    "Plattegrond tweede verdieping\n",
+    "``` \n",
+    "\n",
+    "```{figure} Images/figuurA4_plattegrond_dak.png\n",
+    "---\n",
+    "name: figuurA4\n",
+    "---\n",
+    "Plattegrond dak\n",
+    "``` "
    ]
   },
   {
